[workspace]
resolver = "2"

members = [
    "client",
    "server",
]

[workspace.dependencies]
bevy = { version = "0.12.0" }
bincode = "1.3.3"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.61", default-features = false, features = ["std", "preserve_order"] }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3