[workspace]
resolver = "2"

members = [
    "client",
    "server",
    "tools/block_states"
]

[workspace.dependencies]
bevy = { version = "0.13.0", features = ["file_watcher", "multi-threaded"], default-features = false }
bincode = "1.3.3"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.61", default-features = false, features = ["std", "preserve_order"] }
nalgebra = { version = "0.31.4", features=["serde-serialize"] }

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3