[workspace]
resolver = "2"

members = [
    "client",
    "server",
    "tools/block_states"
]
exclude = [
    "api"
]

[workspace.dependencies]
bincode = "1.3.3"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.61", default-features = false, features = ["std", "preserve_order"] }
rmp-serde = { version = "1.3.0" }
nalgebra = { version = "0.33.0", features=["serde-serialize"] }
bevy = { version = "0.14.1", features = ["multi_threaded"], default-features = false }
tokio = { version = "*", features = ["rt", "sync"] }
jsonwebtoken = {version = "9", default-features = false, features = ["use_pem"] }
web-time = "1.1.0"
fnv = "1.0.7"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
