[package]
name = "bevy-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.8.1" }
fnv = "1.0.3"
rayon = "1.5.1"
nalgebra = "0.21.0"
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.61", default-features = false, features = ["std", "preserve_order"] }
bevy-inspector-egui = "0.12.1"
anyhow = "1.0.57"
image = "0.23.14"
zip = { version = "0.5.5", default-features = false, features = ["deflate"] }
naia-bevy-client = { version = "0.13.0" }
bevy-testing-protocol = { path = "../Protocol" }
bevy_atmosphere = "0.4.1"
bevy_flycam = "0.8.1"

[target.'cfg(not(wasm))'.dev]
bevy = { version = "0.8.1", features = ["dynamic"] }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3