[package]
name = "rustcraft_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustcraft-protocol = { path = "../Protocol" }
nalgebra = "0.21.0"
bevy_app = "0.8.1"
bevy_core = "0.8.1"
bevy_ecs = "0.8.1"
bevy_log = "0.8.1"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features=["net", "rt-multi-thread", "io-util"] }
crossbeam = { version = "0.8.2" }
bincode = "1.3.3"

[profile.dev]
opt-level = 3