[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
serde = { workspace = true }
serde_json = { workspace = true }
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
log = "0.4.22"
rand = "0.9.0-alpha.2"
regex = "1.10.6"
anyhow = "1.0.87"
thiserror = "1.0.63"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"]}
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"