[package]
name = "rc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, default-features = true }
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
fnv = "1.0.3"
rayon = "1.5.1"
anyhow = "1.0.57"
image = "0.23.14"
zip = { version = "0.5.5", default-features = false, features = ["deflate"] }
rc_networking = { path = "../lib/rc_networking" }
rc_shared = { path = "../lib/rc_shared" }
thiserror = "1.0.37"
bevy-inspector-egui = "0.23.0"
bevy_polyline = { git="https://github.com/Threadzless/bevy_polyline" }
bitflags = "2.4.1"
rand = "0.8.5"