[package]
name = "rc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
nalgebra = { workspace = true }
fnv = { workspace = true }
rayon = "1.5.1"
anyhow = "1.0.57"
image = "0.23.14"
zip = { version = "0.5.5", default-features = false, features = ["deflate"] }
rc_networking = { path = "../lib/rc_networking" }
rc_shared = { path = "../lib/rc_shared" }
thiserror = "1.0.37"
bitflags = "2.4.1"
rand = "0.8.5"
web-time = { workspace = true }
bevy = { workspace = true, default-features = true }
rmp-serde = { workspace = true }
bevy_mod_billboard = { version = "0.7.0" }
wasm-bindgen = "0.2.93"
jsonwebtoken = { workspace = true }
reqwest = { version = "0.12.7", features = ["json"] }
js-sys = "0.3.70"
bincode = "1.3.3"
web-sys = { version = "0.3.70", features = ['console', 'Document', 'HtmlElement', 'HtmlInputElement', 'MessageEvent', 'Window', 'Worker', 'WorkerOptions', 'WorkerType'] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, default-features = true, features = ["webgpu"] }
tokio = { workspace = true, features = ["rt", "sync"]}
web-sys = { version = "0.3.70", features = ["Storage"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { workspace = true, default-features = true, features = ["file_watcher"] }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true