[package]
name = "rc_network"
version = "0.1.0"
authors = ["Marshall Ashdowne <daarkzek@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
wasm-bindgen-futures = "0.4.1"
hematite-nbt = "0.5.2"
rc_logging = { path = "../logging" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
openssl = "0.10.30"