[package]
name = "rc_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc_logging = { path = "../logging" }
wgpu = { version = "0.12.0", features = ["spirv"] }
bytemuck = "1.2.0"
nalgebra = "0.21.0"
rusttype = "0.9.2"