[package]
name = "rc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc_client = { path = "../client" }
rc_networking = { path = "../lib/rc_networking" }
nalgebra = "0.31.4"
thiserror = "1.0.37"

[dependencies.bevy]
workspace = true
default-features = false
features = []