[package]
name = "rc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc_client = { path = "../client" }
rc_shared = { path = "../lib/rc_shared" }
nalgebra = "0.31.4"
thiserror = "1.0.37"
serde = { workspace = true }
serde_json = { workspace = true }
ctrlc = { version = "3.2.3" }
noise = "0.8.2"
rayon = "1.5.1"
rc_networking = { path = "../lib/rc_networking" }
rustls = "0.21.6"

[dependencies.bevy]
workspace = true
default-features = false
features = ["bevy_asset"]