[package]
name = "rc_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rc_shared = { path = "../lib/rc_shared" }
nalgebra = "0.33.0"
thiserror = "1.0.37"
serde = { workspace = true }
serde_json = { workspace = true }
noise = "0.8.2"
rayon = "1.5.1"
rc_networking = { path = "../lib/rc_networking" }
rand = "0.8.5"
rustls = "0.23.12"
ctrlc = { version = "3.2.3" }
fnv = { workspace = true }
dotenvy_macro = { workspace = true }

[dependencies.bevy]
workspace = true
default-features = false
features = ["bevy_asset"]