[package]
name = "rc_networking"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "*"
bincode = { workspace = true }
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
rcgen = "*"
quinn = { version = "0.10.2"  }
rustls = { version = "0.21.0", default-features = false, features = ["quic", "dangerous_configuration"] }
tokio = { version = "*", features = ["rt", "rt-multi-thread", "sync"]}
futures = "*"

[dependencies.bevy]
workspace = true
default-features = false
features = []