[package]
name = "rc_networking"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "*"
bincode = { workspace = true }
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
futures = "*"
rc_shared = { path = '../rc_shared' }

[dependencies.bevy]
workspace = true
default-features = false
features = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "*", features = ["rt", "sync"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "*", features = ["rt", "rt-multi-thread", "sync"]}
rustls = { version = "0.21.0", default-features = false, features = ["quic", "dangerous_configuration"] }
quinn = { version = "0.10.2"  }
rcgen = "*"