[package]
name = "rc_networking"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
byteorder = "*"
bincode = { workspace = true }
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
futures = "0.3.30"
web-time = { workspace = true }
rc_shared = { path = '../rc_shared' }
web-transport = "0.6.0"
url = "2.5.2"

[dependencies.bevy]
workspace = true
default-features = false
features = []

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "sync"]}
wasm-bindgen-futures = "0.4.43"
wasm_thread = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }
rustls = { version = "0.23.12", default-features = false, features = ["ring"] }
rcgen = "0.13.1"
rustls-pemfile = "2.1.3"
rustls-native-certs = "0.7.2"
quinn = { version = "0.11.3" }
web-transport-quinn = "0.3.2"