[package]
name = "rc_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server"]
server = []

[dependencies]
bincode = { workspace = true }
byteorder = "*"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"

[dependencies.bevy]
workspace = true
default-features = false
features = []