[package]
name = "rustcraft_asset_management"
version = "0.1.0"
authors = ["Marshall Ashdowne <daarkzek@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.5.0"
winit = "0.21.0"
imgui-wgpu = "0.6.0"
imgui = "0.3"
glsl-to-spirv = { version = "0.1" }
futures = "0.3"
env_logger = "0.5"
imgui-winit-support = "0.3.1"