[package]
name = "block_states"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { workspace = true }
serde = { version = "1.0.193", features = ["derive"] }
nalgebra = { version = "0.31.4", features=["serde-serialize"] }